    removed from Octave 4.0.

      cut                polyderiv
      cor                shell_cmd
      corrcoef           studentize
      __error_text__     sylvester_matrix
      error_text

 ** The following keywords were deprecated in Octave 3.8 and have been
    removed from Octave 4.0

      static

 ** The following configuration variables were deprecated in Octave 3.8
    and have been removed from Octave 4.0

      CC_VERSION  (now GCC_VERSION)
      CXX_VERSION (now GXX_VERSION)

 ** The internal function atan2 of the sparse matrix class has been deprecated
    in Octave 4.0 and will be removed from Octave 4.4 (or whatever version is
    the second major release after 4.0).  Use the Fatan2 function with sparse
    inputs as a replacement.

 ** The internal class <Octave_map> was deprecated in Octave 3.8 and has
    been removed from Octave 4.0.  Replacement classes are
    <octave_map> (struct array) or <octave_scalar_map> for a single structure.

 ** The warning ID Octave:singular-matrix-div has been replaced by
    Octave:nearly-singular-matrix and Octave:singular-matrix.

 ** The configure option --enable-octave-allocator has been removed.
    The internal class <octave_allocator> declared in oct-alloc.h has
    been removed.  The header remains, but is deprecated.  The macros to
    access the class (DECLARE_OCTAVE_ALLOCATOR, DEFINE_OCTAVE_ALLOCATOR,
    and DEFINE_OCTAVE_ALLOCATOR2) are now unconditionally defined to be
    empty.

 ** Qt and FLTK graphics toolkit now support offscreen rendering,
    i.e., print will work when figure visibility is off.

 ** Octave now has OpenMP enabled by default if the system provides a
    working OpenMP implementation.  This allows oct-file modules to take
    advantage of OpenMP if desired.  This can be disabled when building
    Octave with the configure option --disable-openmp.

---------------------------------------------------------

See NEWS.3 for old news.