@@ -46,7 +46,8 @@ is_valid_bsxfun (const std::string& name, const dim_vector& dx,
     }
 
   (*current_liboctave_warning_with_id_handler)
-    ("Octave:broadcast", "%s: automatic broadcasting operation applied",
+    ("Octave:matlab-incompatible",
+     "Matlab compatibility problem - %s automatic broadcasting",
      name.c_str ());
 
   return true;
@@ -76,7 +77,8 @@ is_valid_inplace_bsxfun (const std::string& name, const dim_vector& dr,
     }
 
   (*current_liboctave_warning_with_id_handler)
-    ("Octave:broadcast", "%s: automatic broadcasting operation applied",
+    ("Octave:matlab-incompatible",
+     "Matlab compatibility problem - %s automatic broadcasting",
      name.c_str ());
 
   return true;
