@@ -122,11 +122,6 @@
 ## directory as the .oct file referred to by the autoload() command.
 ## By default, the @code{Octave:autoload-relative-file-name} warning is enabled.
 ##
-## @item Octave:broadcast
-## Warn when performing broadcasting operations.  By default, this is
-## enabled.  See @ref{Broadcasting} in the chapter Vectorization and Faster
-## Code Execution of the manual.
-##
 ## @item Octave:built-in-variable-assignment
 ## By default, the @code{Octave:built-in-variable-assignment} warning is
 ## enabled.
